@@ -30,8 +30,8 @@
     </parent>
     <properties>
         <packaging>jar</packaging>
-        <jdk.version>21</jdk.version>
-        <release.version>21</release.version>
+        <jdk.version>24</jdk.version>
+        <release.version>24</release.version>
         <micronaut.version>4.8.2</micronaut.version>
         <micronaut.runtime>netty</micronaut.runtime>
         <micronaut.aot.enabled>false</micronaut.aot.enabled>
@@ -164,7 +164,6 @@
                 <configuration>
                     <!-- Uncomment to enable incremental compilation -->
                     <!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
-
                     <annotationProcessorPaths combine.children="append">
                         <path>
                             <groupId>io.micronaut</groupId>
@@ -186,6 +185,8 @@
                     <compilerArgs>
                         <arg>-Amicronaut.processing.group=es.nachobrito.rag</arg>
                         <arg>-Amicronaut.processing.module=rag-example</arg>
+                        <arg>--add-modules=jdk.incubator.vector</arg>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
